Change parameters to match casing used elsewhere
